Fix exception handling in static initializers