@@ -7,21 +7,22 @@ import java.lang.invoke.MethodHandles;
 import java.lang.reflect.Field;
 import java.nio.ByteBuffer;
 
-import lombok.SneakyThrows;
-
 public class ByteBufferUnmapper {
 
     private static final MethodHandle UNMAP = lookupUnmapMethodHandle();
 
-    @SneakyThrows
     private static MethodHandle lookupUnmapMethodHandle() {
-        Class<?> unsafeClass = Class.forName("sun.misc.Unsafe");
-        Field f = unsafeClass.getDeclaredField("theUnsafe");
-        f.setAccessible(true);
-        Object theUnsafe = f.get(null);
-        return MethodHandles.lookup()
-            .findVirtual(unsafeClass, "invokeCleaner", methodType(void.class, ByteBuffer.class))
-            .bindTo(theUnsafe);
+        try {
+            Class<?> unsafeClass = Class.forName("sun.misc.Unsafe");
+            Field f = unsafeClass.getDeclaredField("theUnsafe");
+            f.setAccessible(true);
+            Object theUnsafe = f.get(null);
+            return MethodHandles.lookup()
+                    .findVirtual(unsafeClass, "invokeCleaner", methodType(void.class, ByteBuffer.class))
+                    .bindTo(theUnsafe);
+        } catch (Exception e) {
+            throw new ExceptionInInitializerError(e);
+        }
     }
 
     public static void unmap(ByteBuffer mmap) {
